--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/bootstrap.css -->
-    <link rel="stylesheet" href="styles/bootstrap.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="capsStoreApp">
